cursive-bootstrap/tests/ui/E-TYP/E-TYP-2531.cursive
// RUN: compile-fail
// DIAG: E-TYP-2531
// SPEC: 5.3
// DESC: Unconstrained type parameter used in class method

class Container {
    procedure get<T>(~) -> T //~ ERROR E-TYP-2531
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
